# HomesteadOS

./: .dockerignore  .gitignore  Dockerfile  Makefile  PostGIS.Dockerfile  README.md  database.env  docker-compose.yml  init-user-db.sql  manage.py  pyproject.toml  requirements.txt
HomesteadOS/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
UI/: local.properties  settings.gradle.kts
UI/Android/: settings.gradle.kts
UI/composeApp/: build.gradle.kts
UI/iOS/: .gitignore
UI/shared/: build.gradle.kts
home/: HomesteadModelTestCase.py  admin.py  models.py  schema.py  test_models.py  tests.py  views.py
home/GraphQL/: budget_type.py  captial_investment_type.py  homestead_type.py  mutations.py  role_classes_type.py  staff_mutations.py  staff_type.py
home/migrations/: 0001_initial.py  0002_field_name_alter_homestead_name_alter_location_name_and_more.py  0003_expenseclassification_supplier_expense.py  0004_project_capitalinvestment_budget.py  0005_expense_debt.py  0006_alter_location_homestead.py  0007_role_role_class.py  0008_event.py  0009_remove_field_name_alter_budget_property_cost_and_more.py  0010_capitalinvestment_investment_amount_and_more.py  0011_alter_capitalinvestment_investment_date.py  0012_crop_plant_target_date_alter_crop_yield_actual_and_more.py  0013_event_staff_responsible.py  0014_eventexpense.py
home/models/: budget.py  capital_investment.py  crop.py  event.py  event_expense.py  expense.py  expense_classification.py  field.py  follow_up.py  homestead.py  location.py  notification.py  project.py  role.py  role_classes.py  staff.py  supplier.py  (+6 more)
(+75 files in other folders)
