[tool.poetry]
name = "homesteados"
version = "0.1.0"
description = "A homestead automation and assistant"
authors = ["Shawn Campbell <jaegerpicker@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2 = "^2.9.9"
graphene-django = "^3.2.0"
graphene = "^3.3"
python-dotenv = "^1.0.1"
psycopg = "^3.1.18"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
